[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "dialect"

[dependencies]
anyhow = "1"
async-trait = "0.1"
sqlparser = "0.10"   # SQL解析器
polars = {version = "0.15", features = ["json", "lazy"]} # DataFrame库
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"]} 
tokio = {version = "1", features = ["fs"]}  # 异步处理库
tracing = "0.1"  # 日志

[dev-dependencies]
tracing-subscriber = "0.2"   # 日志处理
tokio = {version = "1", features = ["full"]}  # 在example下我们需要更多的tokio feature
